# jellycat-notify

./: .env.template  .gitignore  piccolo_conf.py  pyproject.toml
src/: database.py  definitions.py  main.py
src/cogs/: ping_command.py  poller.py  subscription_commands.py
src/jellycat_notify/: admin_app.py  config.py  main.py  piccolo_app.py  tables.py
src/jellycat_notify/cogs/: poller.py  subscription_commands.py
src/jellycat_notify/piccolo_migrations/: jellycat_notify_2025_04_23t15_26_04_957233.py  jellycat_notify_2025_04_23t15_55_25_560483.py  jellycat_notify_2025_04_23t16_24_25_795624.py
src/jellycat_notify/utils/: jellycat_api.py
src/poc/: jellycat-index.py
src/utils/: jellycat_api.py  page.py
