[project]
name = "jellycat-notify"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "discord-py>=2.5.2",
    "piccolo[sqlite]>=1.24.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
]

[tool.uv]

[tool.poe.tasks]
new-migration = "piccolo migrations new jellycat_notify --auto"
migrate = "piccolo migrations forwards jellycat_notify"
